--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
 <body>
 
+
+	<!-- Menu de navigation-->
+
 	<nav>
 	<label>☰</label>
 		<div class="menu-bar">
@@ -31,10 +34,10 @@
 							<a href="boutique.html">Boutique</a>
 							<div class="sous-menu">
 								<ul>
-									<li><a href="huiles.html">Huiles</a></li>
-									<li><a href="bio.html">Bio</a></li>
-									<li><a href="gourmet.html">Gourmet</a></li>
-									<li><a href="epicerie.html">Epicerie</a></li>
+									<li><a href="boutique.html">Huiles</a></li>
+									<li><a href="boutique.html">Bio</a></li>
+									<li><a href="boutique.html">Gourmet</a></li>
+									<li><a href="boutique.html">Epicerie</a></li>
 									<li><a href="nospaniers.html">Nos paniers</a></li>
 								</ul>
 							</div>
@@ -66,13 +69,15 @@
 								</ul>
 							</div>
 						</li>
-						<li class="limenu"><a href="#"><img class="panier" src="images/panier.svg" alt="panier" loading=lazy></a></li> 
+						<li class="limenu"><a href="panier.html"><img class="panier" src="images/panier.svg" alt="panier" loading=lazy></a></li> 
 						<li class="limenu"><a href="#"><img class="eye" src="images/eye.svg" alt="eye" loading=lazy></a></li> 
 					</ul>
 				</div>
 			</div>
 		</div>
 	</nav>
+	
+	<!-- Fin du menu de navigation-->
 	
 	
 	<!-- Slider-->
@@ -122,7 +127,7 @@
 			</div>
 		</div>
 	</div>	
-	
+
 	<!-- Fin de la bannière produits -->
 
 	
@@ -149,12 +154,12 @@
 		<div class="row5">
 			<div class="product-item">
 					<div class="product_image">
-						<img src="images/produit2.png" alt="Pâté" loading=lazy>
+						<a href="produit_tapenade.html"><img src="images/tapenade.png" alt="Tapenade" loading=lazy></a>
 					</div>
 					<div class="favorite"></div>
 					<div class="product_bubble product_bubble_left product_bubble_green d-flex flex-column "><span>PRO</span></div>
 						<div class="product_info">
-							<h5 class="product_name"><a href="#">Pâté gourmet</a></h5>
+							<h5 class="product_name"><a href="produit_pate.html">Tapenade de Vizcántar</a></h5>
 							<div class="product_price">9,99 €</div>
 						</div>
 					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>
@@ -164,11 +169,11 @@
 		<div class="row5">
 			<div class="product-item">
 					<div class="product_image">
-						<img src="images/produit3.png" alt="Huile d'olive vierge extra" loading=lazy>
+						<a href="produit_huile.html"><img src="images/produit3.png" alt="Huile aromatisée ROMERO" loading=lazy></a>
 					</div>
 					<div class="favorite"></div>
 						<div class="product_info">
-							<h5 class="product_name"><a href="#">Huile d'olive vierge extra</a></h5>
+							<h5 class="product_name"><a href="produit_huile.html">Huile aromatisée ROMERO</a></h5>
 							<div class="product_price">8,99 €</div>
 						</div>
 					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>
@@ -192,11 +197,11 @@
 		<div class="row5">
 			<div class="product-item">
 					<div class="product_image">
-						<img src="images/produit3.png" alt="Huile d'olive vierge extra" loading=lazy>
+						<a href="produit_huile.html"><img src="images/produit3.png" alt="Huile d'olive vierge extra" loading=lazy></a>
 					</div>
 					<div class="favorite"></div>
 						<div class="product_info">
-							<h5 class="product_name"><a href="#">Huile d'olive bio</a></h5>
+							<h5 class="product_name"><a href="produit_huile.html">Huile d'olive vierge extra bio</a></h5>
 							<div class="product_price">9,99 €</div>
 						</div>
 					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>
