--- a/produit_huile.html
+++ b/produit_huile.html
@@ -94,6 +94,7 @@
 				<i class="fa fa-star-half-o"></i>
 			</div>
 			
+			<p>75 cl</p>
 			<p>L'huile arbequina et les arômes naturels du romarin sont mélangés pour vous offrir une huile aromatique d'excellente qualité.</p>
 			
 			<h5>Quantité</h5>
@@ -103,7 +104,7 @@
 			</div>
 			
 			<h5>Prix</h5>
-			<div class="product_price">14,99 € TTC</div>
+			<div class="product_price">14,99 €</div>
 			<input type= "submit2" value="Ajouter au panier" name = "bouton">
 			</div>
 	</div>
