--- a/boutique.html
+++ b/boutique.html
@@ -15,47 +15,63 @@
 
 
 	<!-- Menu de navigation-->
-	
+
 	<nav>
+	<label>☰</label>
 		<div class="menu-bar">
-			<ul>
-		<div class="container">
-			<div class="navbar">
-				<div class="logo">
-					<a href="index.html"><img class="logo" src="images/accueil/logo.png" alt="Logo Don Olivar" loading=lazy></a>
-				</div>
-			<li><a href="index.html">Accueil</a></li>
-			<li><a href="boutique.html">Boutique</a>
-				<div class="sous-menu">
+			<div class="container">
+				<div class="navbar">
 					<ul>
-						<li><a href="huiles.html">Huiles</a></li>
-						<li><a href="bio.html">Bio</a></li>
-						<li><a href="gourmet.html">Gourmet</a></li>
-						<li><a href="epicerie.html">Epicerie</a></li>
-						<li><a href="nospaniers.html">Nos paniers</a></li>
+						<li>
+							<div class="logo">
+								<a href="index.html"><img class="logo" src="images/accueil/logo.png" alt="Logo Don Olivar" loading=lazy></a>
+							</div>
+						</li>
+						<li class="limenu"><a href="index.html">Accueil</a></li>
+						<li class="limenu">
+							<a href="boutique.html">Boutique</a>
+							<div class="sous-menu">
+								<ul>
+									<li><a href="boutique.html">Huiles</a></li>
+									<li><a href="boutique.html">Bio</a></li>
+									<li><a href="boutique.html">Gourmet</a></li>
+									<li><a href="boutique.html">Epicerie</a></li>
+									<li><a href="nospaniers.html">Nos paniers</a></li>
+								</ul>
+							</div>
+						</li>
+						<li class="limenu"><a href="promotions.html">Promotions</a></li>
+						<li class="limenu"><a href="espacepro.html">Espace pro</a></li>
+						<li class="limenu"><a href="blogaccueil.html">Blog</a></li>
+						<li class="limenu"><a href="#"><img class="loupe" src="images/loupe.svg" alt="loupe" loading=lazy></a></li>
+						<li class="limenu"><a href="inscription.html"><img class="compte" src="images/compte.svg" alt="compte" loading=lazy></a>
+							<div class="sous-menu">
+								<ul>
+									<li>
+										<?php
+											if(isset($_SESSION['nom'])){
+										?>
+										<div style="float:left">
+											<a href='page_membre.php'> Mon compte </a> <br>
+											<?php echo "Bonjour". " ".$_SESSION['nom'];?> </div> <br> <br>
+										<?php } 
+										else {
+										?>
+											<a href='formcon_ins.html' style="float:left"> Connexion </a> <br>
+										<?php 
+										}
+										?>
+										<!--<a href="seconnecter.html">Se connecter</a>-->
+									</li>
+									<!--<li><a href="contact.html">Créer un compte</a></li>-->
+								</ul>
+							</div>
+						</li>
+						<li class="limenu"><a href="#"><img class="panier" src="images/panier.svg" alt="panier" loading=lazy></a></li> 
+						<li class="limenu"><a href="#"><img class="eye" src="images/eye.svg" alt="eye" loading=lazy></a></li> 
 					</ul>
 				</div>
-			</li>
-			<li><a href="promotions.html">Promotions</a>
-			</li>
-			<li><a href="espacepro.html">Espace pro</a></li>
-			<li><a href="blogaccueil.html">Blog</a>
-			</li>
-	
-			<li><a href="#"><img class="loupe" src="images/loupe.svg" alt="loupe" loading=lazy></a></li>
-			<li><a href="inscription.html"><img class="compte" src="images/compte.svg" alt="compte" loading=lazy></a>
-			<div class="sous-menu">
-					<ul>
-						<li><a href="seconnecter.html">Se connecter</a></li>
-						<li><a href="contact.html">Créer un compte</a></li>
-					</ul>
-				</div>
-			</li>
-			<li><a href="#"><img class="panier" src="images/panier.svg" alt="panier" loading=lazy></a></li> 
-			<li><a href="#"><img class="eye" src="images/eye.svg" alt="eye" loading=lazy></a></li> 
-			</ul>
 			</div>
-		</div>
 		</div>
 	</nav>
 	
@@ -66,10 +82,10 @@
 
 	<div class="breadcrumbs2">
 		<ul>
-			<a href="huiles.html"><input type= "menubtq" value="Huiles" name = "bouton"></a>
-			<a href="bio.html"><input type= "menubtq" value="Bio" name = "bouton"></a>
-			<a href="epicerie.html"><input type= "menubtq" value="Epicerie" name = "bouton"></a>
-			<a href="gourmet.html"><input type= "menubtq" value="Gourmet" name = "bouton"></a>
+			<a href="#"><input type= "menubtq" value="Huiles" name = "bouton"></a>
+			<a href="#"><input type= "menubtq" value="Bio" name = "bouton"></a>
+			<a href="#"><input type= "menubtq" value="Epicerie" name = "bouton"></a>
+			<a href="#"><input type= "menubtq" value="Gourmet" name = "bouton"></a>
 		</ul>
 	</div>
 
@@ -107,12 +123,12 @@
 		<div class="row5">
 			<div class="product-item">
 					<div class="product_image">
-						<img src="images/product_3.png" alt="Olives vertes" loading=lazy>
+						<a href="produit_confiture.html"><img src="images/confiture.png" alt="Confiture d’olives Águra" loading=lazy></a>
 					</div>
 					<div class="favorite"></div>
 						<div class="product_info">
-							<h5 class="product_name"><a href="#">Olives vertes</a></h5>
-							<div class="product_price">6,99 €</div>
+							<h5 class="product_name"><a href="#">Confiture d’olives Águra</a></h5>
+							<div class="product_price">7,99 €</div>
 						</div>
 					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>	
 			</div>
@@ -121,12 +137,12 @@
 		<div class="row5">
 			<div class="product-item">
 					<div class="product_image">
-						<img src="images/produit2.png" alt="Pâté" loading=lazy>
+						<a href="produit_tapenade.html"><img src="images/tapenade.png" alt="Tapenade" loading=lazy></a>
 					</div>
 					<div class="favorite"></div>
 					<div class="product_bubble product_bubble_left product_bubble_green d-flex flex-column "><span>PRO</span></div>
 						<div class="product_info">
-							<h5 class="product_name"><a href="#">Pâté gourmet</a></h5>
+							<h5 class="product_name"><a href="produit_pate.html">Tapenade de Vizcántar</a></h5>
 							<div class="product_price">9,99 €</div>
 						</div>
 					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>
@@ -136,11 +152,11 @@
 		<div class="row5">
 			<div class="product-item">
 					<div class="product_image">
-						<img src="images/produit3.png" alt="Huile d'olive vierge extra" loading=lazy>
+						<a href="produit_huile.html"><img src="images/produit3.png" alt="Huile aromatisée ROMERO" loading=lazy></a>
 					</div>
 					<div class="favorite"></div>
 						<div class="product_info">
-							<h5 class="product_name"><a href="#">Huile d'olive vierge extra</a></h5>
+							<h5 class="product_name"><a href="produit_huile.html">Huile aromatisée Romero</a></h5>
 							<div class="product_price">8,99 €</div>
 						</div>
 					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>
@@ -168,12 +184,12 @@
 		<div class="row5">
 			<div class="product-item">
 					<div class="product_image">
-						<img src="images/produit2.png" alt="Pâté" loading=lazy>
+						<a href="produit_tapenade.html"><img src="images/tapenade.png" alt="Tapenade" loading=lazy></a>
 					</div>
 					<div class="favorite"></div>
 					<div class="product_bubble product_bubble_left product_bubble_green d-flex flex-column "><span>PRO</span></div>
 						<div class="product_info">
-							<h5 class="product_name"><a href="#">Pâté gourmet</a></h5>
+							<h5 class="product_name"><a href="produit_pate.html">Tapenade de Vizcántar</a></h5>
 							<div class="product_price">9,99 €</div>
 						</div>
 					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>
@@ -183,11 +199,11 @@
 		<div class="row5">
 			<div class="product-item">
 					<div class="product_image">
-						<img src="images/produit3.png" alt="Huile d'olive vierge extra" loading=lazy>
+						<a href="produit_huile.html"><img src="images/produit3.png" alt="Huile aromatisée ROMERO" loading=lazy></a>
 					</div>
 					<div class="favorite"></div>
 						<div class="product_info">
-							<h5 class="product_name"><a href="#">Huile d'olive vierge extra</a></h5>
+							<h5 class="product_name"><a href="produit_huile.html">Huile aromatisée Romero</a></h5>
 							<div class="product_price">8,99 €</div>
 						</div>
 					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>
@@ -214,12 +230,12 @@
 		<div class="row5">
 			<div class="product-item">
 					<div class="product_image">
-						<img src="images/produit2.png" alt="Pâté" loading=lazy>
+						<a href="produit_tapenade.html"><img src="images/tapenade.png" alt="Tapenade" loading=lazy></a>
 					</div>
 					<div class="favorite"></div>
 					<div class="product_bubble product_bubble_left product_bubble_green d-flex flex-column "><span>PRO</span></div>
 						<div class="product_info">
-							<h5 class="product_name"><a href="#">Pâté gourmet</a></h5>
+							<h5 class="product_name"><a href="produit_pate.html">Tapenade de Vizcántar</a></h5>
 							<div class="product_price">9,99 €</div>
 						</div>
 					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>
@@ -229,11 +245,11 @@
 		<div class="row5">
 			<div class="product-item">
 					<div class="product_image">
-						<img src="images/produit3.png" alt="Huile d'olive vierge extra" loading=lazy>
+						<a href="produit_huile.html"><img src="images/produit3.png" alt="Huile aromatisée ROMERO" loading=lazy></a>
 					</div>
 					<div class="favorite"></div>
 						<div class="product_info">
-							<h5 class="product_name"><a href="#">Huile d'olive vierge extra</a></h5>
+							<h5 class="product_name"><a href="produit_huile.html">Huile aromatisée Romero</a></h5>
 							<div class="product_price">8,99 €</div>
 						</div>
 					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>
