--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
 		<div class="row5">
 			<div class="product-item">
 					<div class="product_image">
-						<img src="images/product_3.png" alt="Olives vertes" loading=lazy>
+						<a href="produit_huile.html"><img src="images/produit3.png" alt="Huile aromatisée ROMERO" loading=lazy></a>
 					</div>
 					<div class="favorite"></div>
 						<div class="product_info">
-							<h5 class="product_name"><a href="#">Olives vertes</a></h5>
-							<div class="product_price">6,99 €</div>
+							<h5 class="product_name"><a href="produit_huile.html">Huile aromatisée ROMERO</a></h5>
+							<div class="product_price">8,99 €</div>
 						</div>
-					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>	
+					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>
 			</div>
 		</div>
 		
@@ -169,28 +169,14 @@
 		<div class="row5">
 			<div class="product-item">
 					<div class="product_image">
-						<a href="produit_huile.html"><img src="images/produit3.png" alt="Huile aromatisée ROMERO" loading=lazy></a>
+						<a href="produit_confiture.html"><img src="images/confiture.png" alt="Confiture d’olives Águra" loading=lazy></a>
 					</div>
 					<div class="favorite"></div>
 						<div class="product_info">
-							<h5 class="product_name"><a href="produit_huile.html">Huile aromatisée ROMERO</a></h5>
-							<div class="product_price">8,99 €</div>
+							<h5 class="product_name"><a href="#">Confiture d’olives Águra</a></h5>
+							<div class="product_price">7,99 €</div>
 						</div>
-					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>
-			</div>
-		</div>
-		
-		<div class="row5">
-			<div class="product-item">
-					<div class="product_image">
-						<img src="images/produit5.png" alt="Perles d'huile" loading=lazy>
-					</div>
-					<div class="favorite"></div>
-						<div class="product_info">
-							<h5 class="product_name"><a href="#">Perles d'huile</a></h5>
-							<div class="product_price">19,99 €</div>
-						</div>
-					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>
+					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>	
 			</div>
 		</div>
 		
@@ -205,6 +191,20 @@
 							<div class="product_price">9,99 €</div>
 						</div>
 					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>
+			</div>
+		</div>
+		
+		<div class="row5">
+			<div class="product-item">
+					<div class="product_image">
+						<img src="images/product_3.png" alt="Olives vertes" loading=lazy>
+					</div>
+					<div class="favorite"></div>
+						<div class="product_info">
+							<h5 class="product_name">Olives vertes</h5>
+							<div class="product_price">6,99 €</div>
+						</div>
+					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>	
 			</div>
 		</div>
 		
