--- a/produit_confiture.html
+++ b/produit_confiture.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta charset="UTF-8">
-	<title>Tapenade - Don Olivar</title>
+	<title>Confiture d'olives - Don Olivar</title>
 	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
 	<link rel="stylesheet" href="css/style.css"/>
 		<link rel="stylesheet" href="css/huile.css"/>
@@ -11,7 +11,6 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-
 <body>
 
 
@@ -70,7 +69,7 @@
 			<li><a href="index.html">Accueil</a></li>
 			<li><a href="categories.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Boutique</a></li>
 			<li><a href="categories.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Gourmet</a></li>
-			<li class="active"><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i>Tapenade</a></li>
+			<li class="active"><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i>Confiture d'olives</a></li>
 		</ul>
 	</div>
 
@@ -80,13 +79,13 @@
 	<div class="wrapper">
 		<div class="row">
 			<div class="photo">
-				<img class="huile" src="images/tapenade.png" alt="Tapenade" loading=lazy>
+				<img class="huile" src="images/confiture.png" alt="huile" loading=lazy>
 			</div>
 		</div>
 		
 			<div class="droite">
-			<h4 class="description">Tapenade de Vizcántar</h4>
-			<p>Réf. 02039</p>
+			<h4 class="description">Confiture d’olives Águra</h4>
+			<p>Réf. 02040</p>
 			<div class="note">
 				<i class="fa fa-star"></i>
 				<i class="fa fa-star"></i>
@@ -95,9 +94,8 @@
 				<i class="fa fa-star-half-o"></i>
 			</div>
 			
-			<p>220 gr.</p>
-			<p>Tapenade fabriquée avec une excellente huile multivariétale protégée par l'appellation d'origine Priego de Córdoba,
-			élaborée de manière artisanale, à partir d'olives récoltées à leur point de maturation optimal.</p>
+			<p>100 gr.</p>
+			<p>Confiture réalisée avec de l'huile d'olive extra vierge Picual (récolte précoce).</p>
 			
 			<h5>Quantité</h5>
 			
@@ -106,7 +104,7 @@
 			</div>
 			
 			<h5>Prix</h5>
-			<div class="product_price">9,99 €</div>
+			<div class="product_price">7,99 €</div>
 			<input type= "submit2" value="Ajouter au panier" name = "bouton">
 			</div>
 	</div>
@@ -114,10 +112,13 @@
 	<script src="prix.js"></script>
 
 	<div class="huileproduit">
-		<h4 class="h4produit">Description</h4>
-				<p class="descri">On retrouve un arôme fruité d'olives vertes aux notes herbacées, avec des notes de pomme en arrière bouche,
-				d’artichaut et de tomate. En bouche, on retrouve dans un premier temps des notes d’herbe et dans un second temps des notes de
-				feuille d’olivier, ce qui laisse un agréable équilibre. Nous la recommandons pour vos salades et aliments crus en général.</p>
+		<h4>Description</h4>
+				<p class="descri">Origine : Humilladero, Málaga (Espagne).</p>
+				
+				<p class="descri">Ingrédients : 45% d'huile d'olive vierge extra Picual Águra, eau, 21% de sucre, stabilisant (E-415).
+				Ne contient pas d'allergènes. Fabriqué avec des produits naturels.</p>
+
+				<p class="descri">Conservation : Conserver dans un endroit frais et sec. Une fois ouvert, conserver au frais entre 0 et 5°C et consommer dans les 21 jours.</p>
 	</div>	
 	
 	<!-- Ingrédients -->
@@ -150,45 +151,42 @@
 		<div class="row5">
 			<div class="product-item">
 					<div class="product_image">
-						<a href="produit_tapenade.html"><img src="images/tapenade.png" alt="Tapenade" loading=lazy></a>
+						<a href="produit_confiture.html"><img src="images/confiture.png" alt="Confiture d’olives Águra" loading=lazy></a>
 					</div>
 					<div class="favorite"></div>
-					<div class="product_bubble product_bubble_left product_bubble_green d-flex flex-column "><span>PRO</span></div>
 						<div class="product_info">
-							<h5 class="product_name"><a href="produit_pate.html">Tapenade de Vizcántar</a></h5>
-							<div class="product_price">9,99 €</div>
+							<h5 class="product_name"><a href="#">Confiture d’olives Águra</a></h5>
+							<div class="product_price">7,99 €</div>
 						</div>
-					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>
+					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>	
 			</div>
 		</div>
 		
 		<div class="row5">
 			<div class="product-item">
 					<div class="product_image">
-						<a href="produit_tapenade.html"><img src="images/tapenade.png" alt="Tapenade" loading=lazy></a>
+						<a href="produit_confiture.html"><img src="images/confiture.png" alt="Confiture d’olives Águra" loading=lazy></a>
 					</div>
 					<div class="favorite"></div>
-					<div class="product_bubble product_bubble_left product_bubble_green d-flex flex-column "><span>PRO</span></div>
 						<div class="product_info">
-							<h5 class="product_name"><a href="produit_pate.html">Tapenade de Vizcántar</a></h5>
-							<div class="product_price">9,99 €</div>
+							<h5 class="product_name"><a href="#">Confiture d’olives Águra</a></h5>
+							<div class="product_price">7,99 €</div>
 						</div>
-					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>
+					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>	
 			</div>
 		</div>
 		
 		<div class="row5">
-			<div class="product-item">
+		<div class="product-item">
 					<div class="product_image">
-						<a href="produit_tapenade.html"><img src="images/tapenade.png" alt="Tapenade" loading=lazy></a>
+						<a href="produit_confiture.html"><img src="images/confiture.png" alt="Confiture d’olives Águra" loading=lazy></a>
 					</div>
 					<div class="favorite"></div>
-					<div class="product_bubble product_bubble_left product_bubble_green d-flex flex-column "><span>PRO</span></div>
 						<div class="product_info">
-							<h5 class="product_name"><a href="produit_pate.html">Tapenade de Vizcántar</a></h5>
-							<div class="product_price">9,99 €</div>
+							<h5 class="product_name"><a href="#">Confiture d’olives Águra</a></h5>
+							<div class="product_price">7,99 €</div>
 						</div>
-					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>
+					<div class="add_to_cart_button"><a href="#">ajouter au panier</a></div>	
 			</div>
 		</div>
 		
