--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Différence entre l'huile d'olive vierge et l'huile d'olive vierge extra - Don Olivar</title>
@@ -16,48 +17,49 @@
 
 <body>
 
+
 	<!-- Menu de navigation-->
-	
+
 	<nav>
 		<div class="menu-bar">
-			<ul>
-		<div class="container">
-			<div class="navbar">
-				<div class="logo">
-					<a href="index.html"><img class="logo" src="images/accueil/logo.png" alt="Logo Don Olivar" loading=lazy></a>
-				</div>
-			<li><a href="index.html">Accueil</a></li>
-			<li><a href="boutique.html">Boutique</a>
-				<div class="sous-menu">
+			<div class="container">
+				<div class="navbar">
 					<ul>
-						<li><a href="huiles.html">Huiles</a></li>
-						<li><a href="bio.html">Bio</a></li>
-						<li><a href="gourmet.html">Gourmet</a></li>
-						<li><a href="epicerie.html">Epicerie</a></li>
-						<li><a href="nospaniers.html">Nos paniers</a></li>
+						<li>
+							<div class="logo">
+								<a href="index.html"><img class="logo" src="images/accueil/logo.png" alt="Logo Don Olivar" loading=lazy></a>
+							</div>
+						</li>
+						<li class="limenu"><a href="index.html">Accueil</a></li>
+						<li class="limenu">
+							<a href="boutique.html">Boutique</a>
+							<div class="sous-menu">
+								<ul>
+									<li><a href="boutique.html">Huiles</a></li>
+									<li><a href="boutique.html">Bio</a></li>
+									<li><a href="boutique.html">Gourmet</a></li>
+									<li><a href="boutique.html">Epicerie</a></li>
+									<li><a href="nospaniers.html">Nos paniers</a></li>
+								</ul>
+							</div>
+						</li>
+						<li class="limenu"><a href="promotions.html">Promotions</a></li>
+						<li class="limenu"><a href="espacepro.html">Espace pro</a></li>
+						<li class="limenu"><a href="blogaccueil.html">Blog</a></li>
+						<li class="limenu"><a href="#"><img class="loupe" src="images/loupe.svg" alt="loupe" loading=lazy></a></li>
+						<li class="limenu"><a href="inscription.html"><img class="compte" src="images/compte.svg" alt="compte" loading=lazy></a>
+							<div class="sous-menu">
+								<ul>
+									<li><a href="#">Se connecter</a></li>
+									<li><a href="#">Créer un compte</a></li>
+								</ul>
+							</div>
+						</li>
+						<li class="limenu"><a href="panier.html"><img class="panier" src="images/panier.svg" alt="panier" loading=lazy></a></li> 
+						<li class="limenu"><a href="#"><img class="eye" src="images/eye.svg" alt="eye" loading=lazy></a></li> 
 					</ul>
 				</div>
-			</li>
-			<li><a href="promotions.html">Promotions</a>
-			</li>
-			<li><a href="espacepro.html">Espace pro</a></li>
-			<li><a href="blogaccueil.html">Blog</a>
-			</li>
-	
-			<li><a href="#"><img class="loupe" src="images/loupe.svg" alt="loupe" loading=lazy></a></li>
-			<li><a href="inscription.html"><img class="compte" src="images/compte.svg" alt="compte" loading=lazy></a>
-			<div class="sous-menu">
-					<ul>
-						<li><a href="seconnecter.html">Se connecter</a></li>
-						<li><a href="contact.html">Créer un compte</a></li>
-					</ul>
-				</div>
-			</li>
-			<li><a href="#"><img class="panier" src="images/panier.svg" alt="panier" loading=lazy></a></li> 
-			<li><a href="#"><img class="eye" src="images/eye.svg" alt="eye" loading=lazy></a></li> 
-			</ul>
 			</div>
-		</div>
 		</div>
 	</nav>
 	
@@ -74,25 +76,25 @@
             <div class="gauchef">
                 <div class="groupef">
                     <label>Prénom</label>
-                    <input type="text" id="astérisque" name="champ obligatoire" required>
+                    <input type="text" id="id_prenom" name="champ obligatoire" required>
                     <i class="fas fa-user-plus"></i>
                     <label><abbr>*</abbr></label>
                 </div>
                 <div class="groupef">
                     <label>Nom</label>
-                    <input type="text" id="astérisque" name="champ obligatoire" required>
+                    <input type="text" id="id_nom" name="champ obligatoire" required>
                     <i class="fas fa-user-plus"></i>
                     <label><abbr>*</abbr></label>
                 </div>
                 <div class="groupef">
                     <label>Email</label>
-                    <input type="text" id="astérisque" name="champ obligatoire" required>
+                    <input type="text" id="id_email" name="champ obligatoire" required>
                     <i class="fas fa-envelope"></i>
                     <label><abbr>*</abbr></label>
                 </div>
                 <div class="groupef">
                     <label>Numéro de téléphone</label>
-                    <input type="text" id="astérisque" name="champ obligatoire" required>
+                    <input type="text" id="id_num" name="champ obligatoire" required>
                     <i class="fas fa-mobile-alt"></i>
                     <label><abbr>*</abbr></label>
                 </div>
