--- a/politique.html
+++ b/politique.html
@@ -18,51 +18,54 @@
 
 
 	<!-- Menu de navigation-->
-	
+
 	<nav>
 		<div class="menu-bar">
-			<ul>
-		<div class="container">
-			<div class="navbar">
-				<div class="logo">
-					<a href="index.html"><img class="logo" src="images/accueil/logo.png" alt="Logo Don Olivar" loading=lazy></a>
-				</div>
-			<li><a href="index.html">Accueil</a></li>
-			<li><a href="boutique.html">Boutique</a>
-				<div class="sous-menu">
+			<div class="container">
+				<div class="navbar">
 					<ul>
-						<li><a href="huiles.html">Huiles</a></li>
-						<li><a href="bio.html">Bio</a></li>
-						<li><a href="gourmet.html">Gourmet</a></li>
-						<li><a href="epicerie.html">Epicerie</a></li>
-						<li><a href="nospaniers.html">Nos paniers</a></li>
+						<li>
+							<div class="logo">
+								<a href="index.html"><img class="logo" src="images/accueil/logo.png" alt="Logo Don Olivar" loading=lazy></a>
+							</div>
+						</li>
+						<li class="limenu"><a href="index.html">Accueil</a></li>
+						<li class="limenu">
+							<a href="boutique.html">Boutique</a>
+							<div class="sous-menu">
+								<ul>
+									<li><a href="boutique.html">Huiles</a></li>
+									<li><a href="boutique.html">Bio</a></li>
+									<li><a href="boutique.html">Gourmet</a></li>
+									<li><a href="boutique.html">Epicerie</a></li>
+									<li><a href="nospaniers.html">Nos paniers</a></li>
+								</ul>
+							</div>
+						</li>
+						<li class="limenu"><a href="promotions.html">Promotions</a></li>
+						<li class="limenu"><a href="espacepro.html">Espace pro</a></li>
+						<li class="limenu"><a href="blogaccueil.html">Blog</a></li>
+						<li class="limenu"><a href="#"><img class="loupe" src="images/loupe.svg" alt="loupe" loading=lazy></a></li>
+						<li class="limenu"><a href="inscription.html"><img class="compte" src="images/compte.svg" alt="compte" loading=lazy></a>
+							<div class="sous-menu">
+								<ul>
+									<li><a href="#">Se connecter</a></li>
+									<li><a href="#">Créer un compte</a></li>
+								</ul>
+							</div>
+						</li>
+						<li class="limenu"><a href="panier.html"><img class="panier" src="images/panier.svg" alt="panier" loading=lazy></a></li> 
+						<li class="limenu"><a href="#"><img class="eye" src="images/eye.svg" alt="eye" loading=lazy></a></li> 
 					</ul>
 				</div>
-			</li>
-			<li><a href="promotions.html">Promotions</a>
-			</li>
-			<li><a href="espacepro.html">Espace pro</a></li>
-			<li><a href="blogaccueil.html">Blog</a>
-			</li>
-	
-			<li><a href="#"><img class="loupe" src="images/loupe.svg" alt="loupe" loading=lazy></a></li>
-			<li><a href="inscription.html"><img class="compte" src="images/compte.svg" alt="compte" loading=lazy></a>
-			<div class="sous-menu">
-					<ul>
-						<li><a href="seconnecter.html">Se connecter</a></li>
-						<li><a href="contact.html">Créer un compte</a></li>
-					</ul>
-				</div>
-			</li>
-			<li><a href="#"><img class="panier" src="images/panier.svg" alt="panier" loading=lazy></a></li> 
-			<li><a href="#"><img class="eye" src="images/eye.svg" alt="eye" loading=lazy></a></li> 
-			</ul>
 			</div>
-		</div>
 		</div>
 	</nav>
 	
 	<!-- Fin du menu de navigation-->
+	
+	
+	<!-- Politique de confidentialité -->
 	
 	<div class="pol">
 	<h1 class="h1article"> Notre politique de confidentialité</h1>
@@ -77,14 +80,13 @@
 	données personnelles par le biais de formulaires d'inscription ou de contact, ou par l'envoi de courriers électroniques, et que celles-ci seront traitées
 	par "Don Olivar", Responsable du traitement, dont les données sont :</p>
 	
-	<br>
-	
+		
 	<ol>
-        <li class="lidescription">Nom de la société : Don Olivar S.A.R.L.</li>
-		<li class="lidescription">Numéro SIRET : 307 065 499 00155</li><br>
-		<li class="lidescription">Siège social : 15 rue de Beauregard, 92100 Boulogne-Billancourt, France</li>
-		<li class="lidescription">Téléphone : +33 06 89 48 48 49</li>
-		<li class="lidescription">Mail :  donolivarfr@gmail.com</li>
+        <li class="li_info">Nom de la société : Don Olivar S.A.R.L.</li>
+		<li class="li_info">Numéro SIRET : 307 065 499 00155</li>
+		<li class="li_info">Siège social : 15 rue de Beauregard, 92100 Boulogne-Billancourt, France</li>
+		<li class="li_info">Téléphone : +33 06 89 48 48 49</li>
+		<li class="li_info">Mail :  donolivarfr@gmail.com</li>
     </ol>
 
 	<h2 class="h2article">Collecte et traitement des données personnelles</h2>
