--- a/produit_confiture.html
+++ b/produit_confiture.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Confiture d'olives - Don Olivar</title>
@@ -11,51 +12,52 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
 
 
 	<!-- Menu de navigation-->
-	
+
 	<nav>
 		<div class="menu-bar">
-			<ul>
-		<div class="container">
-			<div class="navbar">
-				<div class="logo">
-					<a href="index.html"><img class="logo" src="images/accueil/logo.png" alt="Logo Don Olivar" loading=lazy></a>
-				</div>
-			<li><a href="index.html">Accueil</a></li>
-			<li><a href="boutique.html">Boutique</a>
-				<div class="sous-menu">
+			<div class="container">
+				<div class="navbar">
 					<ul>
-						<li><a href="huiles.html">Huiles</a></li>
-						<li><a href="bio.html">Bio</a></li>
-						<li><a href="gourmet.html">Gourmet</a></li>
-						<li><a href="epicerie.html">Epicerie</a></li>
-						<li><a href="nospaniers.html">Nos paniers</a></li>
+						<li>
+							<div class="logo">
+								<a href="index.html"><img class="logo" src="images/accueil/logo.png" alt="Logo Don Olivar" loading=lazy></a>
+							</div>
+						</li>
+						<li class="limenu"><a href="index.html">Accueil</a></li>
+						<li class="limenu">
+							<a href="boutique.html">Boutique</a>
+							<div class="sous-menu">
+								<ul>
+									<li><a href="boutique.html">Huiles</a></li>
+									<li><a href="boutique.html">Bio</a></li>
+									<li><a href="boutique.html">Gourmet</a></li>
+									<li><a href="boutique.html">Epicerie</a></li>
+									<li><a href="nospaniers.html">Nos paniers</a></li>
+								</ul>
+							</div>
+						</li>
+						<li class="limenu"><a href="promotions.html">Promotions</a></li>
+						<li class="limenu"><a href="espacepro.html">Espace pro</a></li>
+						<li class="limenu"><a href="blogaccueil.html">Blog</a></li>
+						<li class="limenu"><a href="#"><img class="loupe" src="images/loupe.svg" alt="loupe" loading=lazy></a></li>
+						<li class="limenu"><a href="inscription.html"><img class="compte" src="images/compte.svg" alt="compte" loading=lazy></a>
+							<div class="sous-menu">
+								<ul>
+									<li><a href="#">Se connecter</a></li>
+									<li><a href="#">Créer un compte</a></li>
+								</ul>
+							</div>
+						</li>
+						<li class="limenu"><a href="panier.html"><img class="panier" src="images/panier.svg" alt="panier" loading=lazy></a></li> 
+						<li class="limenu"><a href="#"><img class="eye" src="images/eye.svg" alt="eye" loading=lazy></a></li> 
 					</ul>
 				</div>
-			</li>
-			<li><a href="promotions.html">Promotions</a>
-			</li>
-			<li><a href="espacepro.html">Espace pro</a></li>
-			<li><a href="blogaccueil.html">Blog</a>
-			</li>
-	
-			<li><a href="#"><img class="loupe" src="images/loupe.svg" alt="loupe" loading=lazy></a></li>
-			<li><a href="inscription.html"><img class="compte" src="images/compte.svg" alt="compte" loading=lazy></a>
-			<div class="sous-menu">
-					<ul>
-						<li><a href="seconnecter.html">Se connecter</a></li>
-						<li><a href="contact.html">Créer un compte</a></li>
-					</ul>
-				</div>
-			</li>
-			<li><a href="#"><img class="panier" src="images/panier.svg" alt="panier" loading=lazy></a></li> 
-			<li><a href="#"><img class="eye" src="images/eye.svg" alt="eye" loading=lazy></a></li> 
-			</ul>
 			</div>
-		</div>
 		</div>
 	</nav>
 	
@@ -67,8 +69,8 @@
 	<div class="breadcrumbs">
 		<ul>
 			<li><a href="index.html">Accueil</a></li>
-			<li><a href="categories.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Boutique</a></li>
-			<li><a href="categories.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Gourmet</a></li>
+			<li><a href="boutique.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Boutique</a></li>
+			<li><a href="boutique.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Gourmet</a></li>
 			<li class="active"><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i>Confiture d'olives</a></li>
 		</ul>
 	</div>
@@ -105,7 +107,7 @@
 			
 			<h5>Prix</h5>
 			<div class="product_price">7,99 €</div>
-			<input type= "submit2" value="Ajouter au panier" name = "bouton">
+			<input type= "submit" id="produit" value="Ajouter au panier" name = "bouton">
 			</div>
 	</div>
 	
@@ -123,9 +125,9 @@
 	
 	<!-- Ingrédients -->
 	
-	<h4>Ingrédients dans chaque bouteille</h4>
 	
-	<section class="section2">
+	<h4>Ingrédients dans chaque bouteille</h4>
+	<div class="section2">
 		<div class="col-2">
 				<img class="4raisons" src="images/piment.png" alt="Piment" loading=lazy>
 					<p>Piment</p>
@@ -138,7 +140,7 @@
 				<img class="4raisons" src="images/citron.png" alt="Citron" loading=lazy>
 					<p>Citron</p>
 		</div>
-	</section>
+	</div>
 
 	
 	<hr>
