--- a/seconnecter.html
+++ b/seconnecter.html
@@ -1,16 +1,21 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
+
 <head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8" >
-<title>Formulaire d'identification</title>
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8" >
+	<title>Formulaire d'identification - Don Olivar</title>
 </head>
+
 <body>
+
 CONNEXION <br>
-<form action="login.php" method="post">
-Identifiant : <input type="text" name="login">
-<br>
-Mot de passe : <input type="password" name="pwd"><br>
-<input type="submit" value="Connexion">
-</form>
+	<form action="login.php" method="post">
+		Identifiant : <input type="text" name="login">
+		<br>
+		Mot de passe : <input type="password" name="pwd"><br>
+		<input type="submit" value="Connexion">
+	</form>
 
 </body>
+
 </html> 
